    2. Defining a form parameter with the same name or ID as a JavaScript Form function will cause that function not to
       be callable.

Limitations:
    1. JDK 1.3.1 or higher is required
    2. JavaScript support does not include some DOM properties
    3. The JavaScript assignment Document.cookie= does not restrict the cookie by path and domain


Revision History:
24-Jun-2003
Additions:
    1. rfe #721424: You can now set checkbox values in a form via: setCheckbox(name,boolean) or toggleCheckbox(name).
                    These methods will throw an exception if the specified parameter is not a checkbox or if more than
                    one control  has the name.
    2. PseudoServer now permits setting the maximum protocol level. If it is 1.0, all responses will be forced to
                    HTTP/1.0 no matter the protocol of the request.

20-Jun-2003
Acknowledgements:
    Thanks to Brian O'Kelley for supplying a way to disable use of the proxy server.
    Thanks to David Kilzer for submitting the WebLink.MATCH_TEXT predicate

Additions:
    1. rfe #751505: Add clearProxyServer() to disable the use of the proxy server
    2. rfe #744360: Added getFirstMatchingForm and getMatchingForms() methods to WebResponse and HTMLSegment
    3. rfe #756453: Made Button.isDisabled() method public
    4: rfe #717752: Added WebLink.MATCH_TEXT predicate to match link text exactly

17-Jun-2003
Acknowledgements:
    Thanks to Lloyd McKenzie for finding a problem with listing cookie names and suggesting a fix.

Problems fixed:
    1. bug #750846: Cannot retrieve all cookie names when both global and site-specific cookies are defined.
    2. bug #744214: ServletUnit does not recognize subframes

Additions:
    1. rfe #723895: A new class CookieProperties now supports relaxing cookie matching rules for path, domain, or both.
    2. It is now possible to define a CookieListener on CookieProperties to watch for cookie rejection events

 4-Jun-2003
Additions: